<resources>
    <string name="app_name">玩安卓</string>
    <string name="confirm">确定</string>
    <string name="canel">取消</string>
    <string name="title">温馨提示</string>
    <string name="bottomname1">首页</string>
    <string name="bottomname2">项目</string>
    <string name="bottomname3">广场</string>
    <string name="bottomname4">公众号</string>
    <string name="bottomname5">我的</string>
    <string name="setting_base">基本设置</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_top">显示置顶文章</string>
    <string name="setting_toptip">开启后首页会显示置顶文章</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">设置App的主题颜色</string>
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">版本</string>
    <string name="setting_exit">退出</string>
    <string name="setting_slidable_summary">类似 iOS 左侧滑动返回</string>
    <string name="setting_slidable_title">滑动返回</string>
    <string name="clear_cache">清除缓存</string>
    <string name="setting_mode">列表动画</string>
    <string name="setting_modetip">无</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_tip">本App使用的Api均为 玩安卓网站 提供，仅供于大家学习交流，请禁止将本项目代码转为马甲包添加广告发布到应用市场！！！对那些发布了的人，我要说一句：WCNMD</string>
    <string name="copyright_summary">仅作个人及非商业用途</string>
    <string name="auther">作者</string>
    <string name="auther_name">一个练习时长两年半的安卓开发者→_→</string>
    <string name="project_address">项目源码</string>
    <string name="github_url">https://github.com/hegaojian/WanAndroid</string>
    <string name="open_project">开源项目</string>
    <string name="open_project_tips">项目中用到的开源库</string>

    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="custom">自定义</string>

    <string name="todo_delete">删除</string>
    <string name="todo_update">编辑</string>
    <string name="todo_confirm">完成</string>


    <string name="error_occurred">发生了意外错误。\n抱歉给老哥你带来了不便。</string>
    <string name="error_details">错误详情</string>

</resources>
